[gd_scene load_steps=7 format=3 uid="uid://c87eplpgowiob"]

[ext_resource type="Script" uid="uid://dbo8epnxmbjta" path="res://scripts/UI/StudentSelection.gd" id="1_vqok5"]
[ext_resource type="Theme" path="res://assets/UI/StudentSelectionTema.tres" id="1_wy60f"]
[ext_resource type="Texture2D" uid="uid://d223ecvdflouy" path="res://assets/backgrounds/Background.png" id="2_wmhnq"]
[ext_resource type="Texture2D" uid="uid://hgwymituomox" path="res://assets/backgrounds/BackgroundMenuInicial.png" id="3_70wms"]
[ext_resource type="FontFile" uid="uid://ykfyqbu8t5q7" path="res://assets/fonts/Pixel Digivolve.otf" id="3_84o3k"]
[ext_resource type="Theme" uid="uid://3nwpa37w67em" path="res://assets/UI/MenuInicialTema.tres" id="3_mtaqb"]

[node name="StudentSelection" type="Control"]
self_modulate = Color(0.6, 0.345098, 0.164706, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wy60f")
script = ExtResource("1_vqok5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_70wms")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="TextureRect" type="TextureRect" parent="TextureRect/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_wmhnq")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 265
theme_override_constants/margin_right = 265

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/TextureRect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mtaqb")
theme_override_fonts/font = ExtResource("3_84o3k")
text = "Quem est√° Jogando?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_mtaqb")
theme_override_fonts/font = ExtResource("3_84o3k")

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StudentListContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NewStudentInput" type="LineEdit" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 31)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_mtaqb")
theme_override_colors/font_placeholder_color = Color(0.776471, 0.592157, 0.380392, 1)
theme_override_colors/font_color = Color(0.262745, 0.156863, 0.0941176, 1)
theme_override_fonts/font = ExtResource("3_84o3k")
placeholder_text = "Digite seu nome aqui"
alignment = 1

[node name="CreateStudentButton" type="Button" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_mtaqb")
theme_override_fonts/font = ExtResource("3_84o3k")
text = "Criar e Entrar"

[node name="HSeparator3" type="HSeparator" parent="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[connection signal="pressed" from="TextureRect/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/CreateStudentButton" to="." method="_on_botao_criar_pressionado"]
